2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_init): Use a HildonEntry instead
	of a GtkEntry to get proper theming.

	Fixes: NB#94972 (Hildon Picker with Entry should use HildonEntry
	widget, not GtkEntry)

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-wizard-dialog.c: (response): Move forward if there is
	no HildonWizardDialogPageFunc.

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-app-menu.c:
	* src/hildon-button.c:
	* src/hildon-picker-dialog.c: (hildon_picker_dialog_class_init):
	* src/hildon-stackable-window.c:
	* src/hildon-time-selector.c:
	* src/hildon-touch-selector.c:
	* src/hildon-window.c:

	Add more "since" tags to the new API in hildon 2.2.

2008-12-05  Tim Janik  <timj@imendio.com>

	Patch contributed by Christian Dywan (christian@imendio.com)

	* src/hildon-gtk.h: removed hildon_gtk_widget_set_theme_size() and
	HildonSizeType, which are supplied by Gtk+ now.

	* src/hildon-dialog.c: leave theming and sizing of buttons to GtkDialog.

	Partially fixes NB#90867 (Deprecate HildonDialog and use GtkDialog
	(with maemo changes) instead)

2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-pannable-area.c: Add "since" tags to the new API in
	hildon 2.2.

2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-wizard-dialog-example.c: (on_page_switch),
	(some_page_func), (main): Update the example to use a
	HildonWizardDialogPageFunc function.

	* src/hildon-wizard-dialog-private.h: Add private data for
	the HildonWizardDialogPageFunc function usage.

	* src/hildon-wizard-dialog.c: (hildon_wizard_dialog_class_init),
	(destroy), (hildon_wizard_dialog_init), (response),
	(hildon_wizard_dialog_set_forward_page_func):
	* src/hildon-wizard-dialog.h: Add a HildonWizardDialogPageFunc function,